--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
     
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <!-- Inline CSS -->
+    <style>
+      body {
+        background-color: #000000;
+        color: #ffffff;
+        font-size: 42px;
+      }
+      .table {
+        background-color: #000000;
+        color: #ffffff;
+      }
+      .container {
+        margin-top: 30px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-      <h2>Hallavägen väder</h2>
+      <!-- Make the heading centered -->
+      <h2 class="text-center" style="font-size: xxx-large;">Hallavägen väder</h2>
       <div class="row">
         <div class="col-md-6">
           <table class="table">
