--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       body {
         background-color: #000000;
         color: #ffffff;
-        font-size: 42px;
+        font-size: 35px;
       }
       .table {
         background-color: #000000;
         color: #ffffff;
       }
       .container {
-        margin-top: 30px;
+        margin-top: 5px;
       }
     </style>
   </head>
@@ -44,11 +44,17 @@
           </table>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-center" style="font-size: x-large;">Senaste uppdatering: <span id="last-updated" style="font-weight: bold;"></span></p>
+        </div>
+      </div>
     </div>
     
     <script>
         async function getWeatherData() {
-            const weatherData = await fetch("http://localhost:3137/weather_data").then(res => res.json());
+            const stationData = await fetch("http://localhost:3137/weather_data").then(res => res.json());
+            const weatherData = stationData['weather_data'];
 
             const half_weatherData = Math.ceil(weatherData.length / 2);
             const remaining_weatherData = weatherData.length - half_weatherData;
@@ -65,6 +71,9 @@
             });
             rightListEl = document.querySelector(".right-table");
             rightListEl.innerHTML = rightItems.join("");
+
+            lastUpdatedEl = document.querySelector("#last-updated");
+            lastUpdatedEl.innerHTML = stationData['time_updated'];
         }
         getWeatherData();
         // Run the function every 10 seconds
